# SoundRecorder

./: CMakeLists.txt  CMakeSettings.json  main.c  main.h  resource.h  resource.rc  soundrecorder.c  soundrecorder.h  tools.c  tools.h
lang/: en-US.rc
