# CMakeList.txt : CMake project for SoundRecorder, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SoundRecorder")

# Add source to this project's executable.
add_executable (SoundRecorder "soundrecorder.c")

# TODO: Add tests and install targets if needed.
